# backend

./: README.md  pyproject.toml  test_database.db
app/: DB_session.py  api.py  base.py  main.py
app/favorite/: base.py  model.py  router.py  service.py
app/like/: model.py  router.py  service.py
app/poll/: model.py
app/review/: model.py  router.py  service.py
app/store/: model.py  router.py  service.py  store_service.py
app/store/menu/: model.py
app/test/dummy/: favorite_dummy.py  review_dummy.py  user_dummy.py
app/user/: exceptions.py  login_with_auth.py  model.py  router.py  service.py
app/user/favorite/: model.py
cmd/: create_DB.py  insert_store_data.py  startup_server.py
crawlingCode/: kakaomapCrawling.py  naverMenuCrawling.py  package-lock.json  package.json  readMe.md
crawling_2_DB/: crawling_model.py
