[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SMin1620 <ibb09@naver.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
uvicorn = "^0.17.4"
sqlmodel = "^0.0.6"
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
